precompiles/macro/tests/compile-fail/precompile/discriminant/dont-return-option.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/dont-return-option.rs:27:2
   |
27 |     fn discriminant(address: H160) -> u32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
